2013-11-18 Dan Locks <dwlocks@zmanda.com>
	* example/Makefile.am: include new files in dist tarball
	* example/amandaclient-tcp.xml.in, example/amandaserver-tcp.xml.in:
	  smf manifests for solaris >= 10

2013-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/progs.m4: AC_SUBST(SORT_PATH)
	* perl/Amanda/Constants.pm.in: Add SORT_PATH
	* perl/Amanda/Logfile.swg: Add getindexfname
	* perl/Amanda/Message.pm: Add Amanda::Index::Message
	* perl/Amanda/Status.pm:: s/Message/Amanda::Status::Message/
	* perl/Amanda/Index.pm: New perl module to return index file and
	  header from index directory.
	* perl/Amanda/JSON/Index.pm: New JSON module.
	* perl/Amanda/JSON.pm: Add missing JSON modules.
	* perl/Makefile.am: Add Amanda/JSON/Index.pm and Amanda/Index.pm
	* server-src/amanda.psgi.pl: Add Amanda::JSON::Index::* methods.

2013-11-15  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, application-src/ampgsql.pl,
	* application-src/amraw.pl, application-src/amsamba.pl,
	* application-src/amstar.c, application-src/amsuntar.pl,
	* application-src/amzfs-sendrecv.pl: Implement index command.
	* perl/Amanda/Application.swg: Enable index command
	* server-src/amcheckdump.pl, server-src/amreindex.pl: Pass --config,
	  --host, --disk, --device and --level to the application.

2013-11-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/fileheader.c (parse_heredoc): print message to debug if
	  end of heredoc is not found.
	* server-src/amfetchdump.pl: Trap failure on XML::Simple::XMLin.

2013-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Curinfo/Info.pm: Small fix.

2013-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amreindex.pl: Compress the index file if compress-index
	  is set.

2013-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Add erase-on-full And many missing storage setting.
	* common-src/conffile.c: Add CONF_ERASE_ON_FULL in storage.